--- a/Conferences/Tver/Kocheganov_Zorine.tex
+++ b/Conferences/Tver/Kocheganov_Zorine.tex
@@ -567,104 +567,135 @@ E[v_1^{\varkappa_{1,i+1}}v_3^{\varkappa_{1,i+1}}I(\Gamma_{i+1}=\tilde{\gamma}) |
 \end{multline}
 и подставляя полученные выражения \eqref{second:try:first}, \eqref{second:try:second} в выражение  \eqref{second:try:gen}, получаем утверждение леммы.
 \end{proof}
-Из этой леммы, в частности, следует существование величин $\mathfrak{M}^{(1,i)}(k, r,v_1,v_3)$ хотя бы в некоторой окресности точки $(v_1,v_3)=(1,1)$, для $i>0$, $k=\overline{0;d}$, $r=\overline{1;n_{k}}$.
+Из этой леммы следует существование величин $\mathfrak{M}^{(1,i)}(k, r,v_1,v_3)$ хотя бы в некоторой окресности точки $(v_1,v_3)=(1,1)$, для $i>0$, $k=\overline{0;d}$, $r=\overline{1;n_{k}}$.
 
 В работе \cite{Kocheganov:2017:1} доказана ограниченность частичных производящих функций $\mathfrak{M}^{(3,i)}(k,r,v_3)~\hm= ~E[v_3^{\varkappa_{3,i}}{I(\Gamma_{i}=\Gamma^{(k,r)})}]$ по $i\geqslant 0$ для всех $v_3\in [1,1+\varepsilon_3]$, при некотором $0 < \varepsilon_3 < \varepsilon$, где $\varepsilon>0$ определено в \eqref{GeneratingFunc}. Причем заметим, что в наших обозначениях $\mathfrak{M}^{(3,i)}(k,r,v_3) =\mathfrak{M}^{(1,i)}(k,r,1,v_3) $. Цель следующей леммы~--- доказать аналогичный результат для величин $\mathfrak{M}^{(1,i)}(k,r,v_1,1)$, $i\geqslant 0$.
 \begin{lemma}
 Если 
 $$
-\min_{k=\overline{1,d}} { \frac{\sum_{r = 1}^{n_k} \ell(k,r,1) }{\lambda_1 f_1'(1) \sum_{r=1}^{n_k} T^{(k,r)} }}>1,
+\min_{k=\overline{0,d}} { \frac{\sum_{r = 1}^{n_k} \ell(k,r,1) }{\lambda_1 f_1'(1) \sum_{r=1}^{n_k} T^{(k,r)} }}>1,
 $$
-то числовая последовательность $\{\mathfrak{M}^{(1,i)}(k,r,v_1,1); i\geqslant 0\}$ ограничена при $v_1 \hm\in [1, 1+\varepsilon_1]$, для некоторого $ 0 < \varepsilon_1 < \varepsilon$, где $\varepsilon>0$ определено в \eqref{GeneratingFunc}.
+то числовая последовательность $\{\mathfrak{M}^{(1,i)}(k,r,v,1); i\geqslant 0\}$ ограничена при $v \hm\in [1, 1+\varepsilon_1]$, для некоторого $ 0 < \varepsilon_1 < \varepsilon$, где $\varepsilon>0$ определено в \eqref{GeneratingFunc}.
 \label{generating:1:limited}
 \end{lemma}
 \begin{proof}
-В соответствии с леммой \eqref{second:approach:lemma:first:step} можем записать:
+ Введем случайные последовательности $\{\varkappa_{1}^{(1)}(i); i\geqslant0\}$ и $\{\varkappa_{1}^{(2)}(i); i \hm\geqslant 0\}$ следующим образом. Положим для $i=0$: $\varkappa_{1}^{(1)}(0)=0$ и $\varkappa_{1}^{(2)}(0)=\varkappa_{1,0}$. Далее введем рекуррентные соотношения:  
+\begin{equation*}
+  \varkappa_{1}^{(1)}(i+1) =
+  \begin{cases}
+    \max{\{0,\varkappa_{1}^{(1)}(i) + \eta_{1,i} - \xi_{1,i}\}},&  \text{если } \Gamma_{i+1}=\Gamma^{(k,r)}, k>0, r=\overline{1,n_k}; \\
+    \varkappa_{1}^{(1)}(i),&  \text{если } \Gamma_{i+1}=\Gamma^{(0,r)}, r=\overline{1,n_0};
+  \end{cases}
+\end{equation*}
+\begin{equation*}
+  \varkappa_{1}^{(2)}(i+1) =
+  \begin{cases}
+    \varkappa_{1}^{(2)}(i),&  \text{если } \Gamma_{i+1}=\Gamma^{(k,r)}, k>0, r=\overline{1,n_k};\\
+    \max{\{0,\varkappa_{1}^{(2)}(i) + \eta_{1,i} - \xi_{1,i}\}},&  \text{если } \Gamma_{i+1}=\Gamma^{(0,r)}, r=\overline{1,n_0}.
+  \end{cases}
+\end{equation*}
+Тогда последовательность $\varkappa_{1,i}^+=\varkappa_{1}^{(1)}(i) + \varkappa_{1}^{(2)}(i)$ является мажорирующей для последовательности $\varkappa_{1,i}$, т.е. $\varkappa_{1,i}(\omega) \leqslant \varkappa_{1,i}^+(\omega)$, $\forall \omega \in \Omega$. Доказательство этого факта проводится по индукции и в данной статье его приводить не будем. Заметим только, что из него следует для $v\geqslant 1$ неравенство
+\begin{equation}
+E[v^{\varkappa_{1,i}}]\leqslant E[v^{\varkappa_{1}^{(1)}(i)} v^{\varkappa_{1}^{(2)}(i)}].
+\label{cenzor:estimate}
+\end{equation}
+                               
+
+Наблюдение за вновь введенными величинами $\varkappa_{1}^{(1)}(i)$ и $\varkappa_{1}^{(2)}(i)$ будем осуществлять в случайные моменты времени $\theta_{i}^{(1)}$ и $\theta_{i}^{(2)}$, соответственно, определяемые следующими соотношениями:
+\begin{equation}
+\begin{aligned}
+  \theta_{0}^{(1)}=0; & \quad \theta_{i+1}^{(1)}=\theta_{i}^{(1)} + \min{\{s>0\colon \Gamma_{\theta_{i}^{(1)}+s} = \Gamma^{(k,n_k)}, k>0\}};\\
+  \theta_{0}^{(2)}=0; & \quad  \theta_{i+1}^{(2)}=\theta_{i}^{(2)} + \min{\{s>0\colon \Gamma_{\theta_{i}^{(2)}+s} = \Gamma^{(0,r)}, r=\overline{1,n_0}\}}.
+  \label{stop:times}
+\end{aligned}
+\end{equation}
+Также нам понадобятся следующие обозначения:
+\begin{equation}
+  \hat{\varkappa}_{1,i}^{(1)}=\varkappa_{1}^{(1)}(\theta_{i}^{(1)}), \quad   \hat{\varkappa}_{1,i}^{(2)}=\varkappa_{1}^{(2)}(\theta_{i}^{(2)}).
+  \label{stop:queue}
+\end{equation}
+Пусть $k>0$, $r \in \{2, 3, \ldots, n_k\}$. В веденных обозначениях рассмотрим выражение для $E[v^{\varkappa_{1}^{(1)}(i+1)} I(\Gamma_{i+1}=\Gamma^{(k,r)})]$:
+\begin{multline*}
+  E[v^{\varkappa_{1}^{(1)}(i+1)} I(\Gamma_{i+1}=\Gamma^{(k,r)})] = \\ =\sum_{w_1 \geqslant 0} \sum_{w_3 \geqslant 0} \sum_{\gamma \in \Gamma} E[v^{\varkappa_{1}^{(1)}(i+1)} I(\Gamma_{i+1}=\Gamma^{(k,r)}, \varkappa_{1}^{(1)}(i)=w_1, \varkappa_{3,i}=w_3,\Gamma_i=\gamma)] =\\= \sum_{w_1\geqslant 0} \sum_{w_3\geqslant 0} E[v^{w_1 + \eta_{1,i}-\ell(k,r,1)} I(\varkappa_{1}^{(1)}(i)=w_1, \varkappa_{3,i}=w_3,\Gamma_i=\Gamma^{(k,r-1)})] + \widetilde{C}_1=\\
+  =\sum_{w_1\geqslant 0} v^{w_1 } \Pr (\varkappa_{1}^{(1)}(i)=w_1, \Gamma_i=\Gamma^{(k,r-1)}) q^{(1)}(k,r,v) + \widetilde{C}_1 = \\
+  =q^{(1)}(k,r,v) E[v^{\varkappa_{1}^{(1)}(i)} I(\Gamma_i=\Gamma^{(k,r-1)})] + \widetilde{C}_1.
+\end{multline*}
+И далее по индукции:
+\begin{equation*}
+  E[v^{\varkappa_{1}^{(1)}(i+n_k-1)} I(\Gamma_{i+n_k-1}=\Gamma^{(k,n_k)})] = \prod_{r=2}^{n_k} q^{(1)}(k,r,v) E[v^{\varkappa_{1}^{(1)}(i)} I(\Gamma_{i}=\Gamma^{(k,1)})].
+\end{equation*}
+Для $w_1, w_3 \in Z_+$, $\gamma, \gamma_1, \gamma_2 \in \Gamma$, $C \subset [0, +\infty)$ введем множества 
+\begin{align*}
+  A_i^{(1)}(w_1,w_3,\gamma) &= \{\omega\colon \varkappa_{1}^{(1)}(\theta_{i}^{(1)})=w_1; \varkappa_{3,\theta_{i}^{(1)}}=w_3, \Gamma_{\theta_{i}^{(1)}}=\gamma\};\\
+  A_i^{(1)}(w_1,C,\gamma) &= \bigcup_{w_3 \in C} A_i^{(1)}(w_1,w_3,\gamma);\quad B_i^{(1)}(\gamma) =\{\omega\colon \Gamma_{\theta_{i}^{(1)}}=\gamma\};\\
+  C_i^{(1)}(\gamma_1,w_1,w_3,\gamma_2)&= B_{i+1}^{(1)}(\gamma_1) \cap A_i^{(1)}(w_1,w_3,\gamma_2) .
+\end{align*}
+
+Пусть $\tilde{k}>0$. Тогда
+\begin{multline*}
+  E[v^{\hat{\varkappa}_{1,i+1}^{(1)}} I(\Gamma_{\theta_{i+1}^{(1)}}= \Gamma^{(\tilde{k},n_{\tilde{k}})})] =\\=E[v^{\hat{\varkappa}_{1,i+1}^{(1)}} I(B_{i+1}^{(1)}(\Gamma^{(\tilde{k},n_{\tilde{k}})}))] 
+  =E[v^{\varkappa_{1}^{(1)}(\theta_{i+1}^{(1)})} I(B_{i+1}^{(1)}(\Gamma^{(\tilde{k},n_{\tilde{k}})}))] =\\
+  =\prod_{\tilde{r}=2}^{n_{\tilde{k}}} q^{(1)}(\tilde{k},\tilde{r},v) E[v^{\varkappa_{1}^{(1)}(\tau)} I(B_{i+1}^{(1)}(\Gamma^{(\tilde{k},n_{\tilde{k}})}))] + \widetilde{C}_1=\\
+  %=\prod_{\tilde{r}=2}^{n_{\tilde{k}}} q^{(1)}(\tilde{k},\tilde{r},v)    \sum_{\substack{w_1\geqslant 0, \\ w_3 \geqslant 0}}  \sum_{\gamma \in \Gamma} E[v^{\varkappa_{1}^{(1)}(\tau)}  I( C_i^{(1)}(\Gamma^{(\tilde{k},n_{\tilde{k}})},w_1,w_3,\gamma ))] + \widetilde{C}_1= \\
+  =\prod_{\tilde{r}=2}^{n_{\tilde{k}}} q^{(1)}(\tilde{k},\tilde{r},v) \sum_{\substack{w_1\geqslant 0, \\ w_3 \leqslant L}} \sum_{k=1}^d E[v^{\varkappa_{1}^{(1)}(\tau)} I( C_i^{(1)}(\Gamma^{(\tilde{k},n_{\tilde{k}})},w_1,w_3,\Gamma^{(k,n_k)} ))] + \\ +
+    \prod_{\tilde{r}=2}^{n_{\tilde{k}}} q^{(1)}(\tilde{k},\tilde{r},v) \sum_{\substack{w_1\geqslant 0, \\ w_3 > L}}  E[v^{\varkappa_{1}^{(1)}(\tau)} I( C_i^{(1)}(\Gamma^{(\tilde{k},n_{\tilde{k}})},w_1,w_3,\Gamma^{(\tilde{k},n_{\tilde{k}})} ))] +\widetilde{C}_1,
+\end{multline*}
+где мы обозначили для краткости $\tau = \theta_{i+1}^{(1)} -n_{\tilde{k}} + 1$.
+Далее поскольку 
+$$\varkappa_{1}^{(1)}(\tau) = \max{\{0; \varkappa_{1 }^{(1)}(\theta_{i}^{(1)}) +\eta_{1,\tau}-\ell(1,\tilde{k},1) \}},
+$$
+то продолжим цепочку рассуждений:
 \begin{multline}
-\mathfrak{M}^{(1,i+1)}(\tilde{k},\tilde{r},v_1,1) 
-= \sum_{w_1=0}^{\infty}\sum_{w_3=0}^{\infty} \sum_{\Gamma^{(k,r)} \in {\mathbb H}_{-1}(\tilde{\gamma},w_3)} Q_{1,i}(\Gamma^{(k,r)},w_1,w_3) \times \\ \times \bigl[ v_1^{w_1} q^{(1)}(\tilde{k},\tilde{r},v_1) + I(\tilde{\gamma}\in \Gamma^{\mathrm{\Rmnum{1}}}) \sum_{a=0}^{\ell(\tilde{k},\tilde{r},1)-w_1} \varphi_1(a,T^{(\tilde{k},\tilde{r})})(1-v_1^{w_1+a-\ell(\tilde{k},\tilde{r},1)})\bigr].
-\label{two:summs}
-\end{multline}
-Оценим слагаемое из правой части выражения \eqref{two:summs}, содержащее индикатор $I(\tilde{\gamma}~\in~\Gamma^{\mathrm{\Rmnum{1}}})$:
+E[v^{\hat{\varkappa}_{1,i+1}^{(1)}} I(\Gamma_{\theta_{i+1}^{(1)}}= \Gamma^{(\tilde{k},n_{\tilde{k}})})]= \prod_{\tilde{r}=2}^{n_{\tilde{k}}} q^{(1)}(\tilde{k},\tilde{r},v) \sum_{\substack{w_1\geqslant 0, \\ w_3 \leqslant L}} \sum_{k=1}^d v^{w_1} v^{- \ell(1,\tilde{k},1)} \times \\ \times E[v^{ \eta_{1,\tau} } I( C_i^{(1)}(\Gamma^{(\tilde{k},n_{\tilde{k}})},w_1,w_3,\Gamma^{(k,n_k)} ))] +
+\prod_{\tilde{r}=2}^{n_{\tilde{k}}} q^{(1)}(\tilde{k},\tilde{r},v)\times \\ \times \sum_{\substack{w_1\geqslant 0, \\ w_3 > L}} v^{w_1}v^{- \ell(1,\tilde{k},1)}  E[v^{ \eta_{1,\tau}} I( C_i^{(1)}(\Gamma^{(\tilde{k},n_{\tilde{k}})},w_1,w_3,\Gamma^{(\tilde{k},n_{\tilde{k}})} ))] + \widetilde{C}_2 = \\
+  = Q_1(v,\tilde{k})  \biggl(\sum_{w_1\geqslant 0} \sum_{k=1}^d v^{w_1} \Pr(C_i^{(1)}(\Gamma^{(\tilde{k},n_{\tilde{k}})},w_1,[0;L],\Gamma^{(k,n_k)} )) + \\
+   + \sum_{w_1\geqslant 0}  v^{w_1} \Pr(C_i^{(1)}(\Gamma^{(\tilde{k},n_{\tilde{k}})},w_1,(L;\infty),\Gamma^{(\tilde{k},n_{\tilde{k}})} ))\biggr) + \widetilde{C}_2,
+   \label{censor:before:sum}
+  \end{multline}
+где $Q_1(v,\tilde{k})= \prod_{\tilde{r}=1}^{n_{\tilde{k}}} q^{(1)}(\tilde{k},\tilde{r},v) $. Просуммируем по $\tilde{k}$ получившийся в \eqref{censor:before:sum} результат:
+\allowdisplaybreaks
 \begin{multline*}
-\sum_{w_1=0}^{\infty}\sum_{w_3=0}^{\infty} \sum_{\Gamma^{(k,r)} \in {\mathbb H}_{-1}(\tilde{\gamma},w_3)} Q_{1,i}(\Gamma^{(k,r)},w_1,w_3) I(\tilde{\gamma}\in \Gamma^{\mathrm{\Rmnum{1}}}) \times \\ \times \sum_{a=0}^{\ell(\tilde{k},\tilde{r},1)-w_1} \varphi_1(a,T^{(\tilde{k},\tilde{r})})(1-v_1^{w_1+a-\ell(\tilde{k},\tilde{r},1)}) \leqslant \\ \leqslant
-\sum_{w_1=0}^{\ell(\tilde{k},\tilde{r},1)}\sum_{w_3=0}^{\infty} \sum_{\Gamma^{(k,r)} \in {\mathbb H}_{-1}(\tilde{\gamma},w_3)} \!\!\!\!\!\!Q_{1,i}(\Gamma^{(k,r)},w_1,w_3)  \sum_{a=0}^{\ell(\tilde{k},\tilde{r},1)-w_1} \varphi_1(a,T^{(\tilde{k},\tilde{r})})(1-v_1^{w_1+a-\ell(\tilde{k},\tilde{r},1)}),
-\end{multline*}
-поскольку верхний предел суммирования $\ell(\tilde{k},\tilde{r},1)-w_1$ должен быть неотрицателен и, значит, $w_1 \leqslant \ell(\tilde{k},\tilde{r},1)$. Далее, поменяв суммирование по $a$ и $w_3$ местами, получим
+\sum_{\tilde{k}=1}^d E[v^{\hat{\varkappa}_{1,i+1}^{(1)}} I(\Gamma_{\theta_{i+1}^{(1)}}= \Gamma^{(\tilde{k},n_{\tilde{k}})})]=   E[v^{\hat{\varkappa}_{1,i+1}^{(1)}} ]=\\
+  = \sum_{\tilde{k}=1}^d Q_1(v,\tilde{k})  \biggl(\sum_{w_1\geqslant 0} \sum_{k=1}^d v^{w_1} \Pr(C_i^{(1)}(\Gamma^{(\tilde{k},n_{\tilde{k}})},w_1,[0;L],\Gamma^{(k,n_k)} )) + \\
+   + \sum_{w_1\geqslant 0}  v^{w_1} \Pr(C_i^{(1)}(\Gamma^{(\tilde{k},n_{\tilde{k}})},w_1,(L;\infty),\Gamma^{(\tilde{k},n_{\tilde{k}})} ))\biggr) + \widetilde{C}_3 \leqslant \\ \leqslant
+   \max_{ \tilde{k}=\overline{1;d} }{\{Q_1(v,\tilde{k}) \}} \sum_{w_1\geqslant 0}  v^{w_1} \biggl(\sum_{\tilde{k}=1}^d \sum_{k=1}^d  \Pr(C_i^{(1)}(\Gamma^{(\tilde{k},n_{\tilde{k}})},w_1,[0;L],\Gamma^{(k,n_k)} )) + \\
+   +  \sum_{\tilde{k}=1}^d \Pr(C_i^{(1)}(\Gamma^{(\tilde{k},n_{\tilde{k}})},w_1,(L;\infty),\Gamma^{(\tilde{k},n_{\tilde{k}})} ))\biggr) + \widetilde{C}_3 = \\
+   =\max_{ \tilde{k}=\overline{1;d} }{\{Q_1(v,\tilde{k}) \}} \sum_{w_1\geqslant 0}  v^{w_1} \Pr(\hat{\varkappa}_{1,i}^{(1)}=w_1)+ \widetilde{C}_3=\max_{ \tilde{k}=\overline{1;d} }{\{Q_1(v,\tilde{k}) \}} E[v^{\hat{\varkappa}_{1,i}^{(1)}} ]+ \widetilde{C}_3.
+  \end{multline*}
+
+Для $\hat{\varkappa}_{1,i}^{(2)}$ можно провести похожие рассуждения и в итоге получить оценки:
+\begin{align}
+ E[v^{\hat{\varkappa}_{1,i+1}^{(1)}} ] &\leqslant \max_{ \tilde{k}=\overline{1;d} }{\{Q_1(v,\tilde{k}) \}} E[v^{\hat{\varkappa}_{1,i}^{(1)}} ]+ \widetilde{C}_3;\\
+  E[v^{\hat{\varkappa}_{1,i+n_0}^{(2)}}] &\leqslant Q_1(v,0) E[v^{\hat{\varkappa}_{1,i}^{(2)}} ] + \widetilde{C}_4,
+  \end{align}
+  где $r=\overline{1,n_0}$. Для $k=\overline{0;d}$ верны равенства $Q_1(1,k)=1$. Предположив выполненным условие $\min_{k=\overline{0,d}} { \frac{\sum_{r = 1}^{n_k} \ell(k,r,1) }{\lambda_1 f_1'(1) \sum_{r=1}^{n_k} T^{(k,r)} }}>1$, получим, что величины
 \begin{multline}
-\sum_{w_1=0}^{\ell(\tilde{k},\tilde{r},1)}\sum_{w_3=0}^{\infty} \sum_{\Gamma^{(k,r)} \in {\mathbb H}_{-1}(\tilde{\gamma},w_3)} \!\!\!\!\!\!Q_{1,i}(\Gamma^{(k,r)},w_1,w_3)  \sum_{a=0}^{\ell(\tilde{k},\tilde{r},1)-w_1} \varphi_1(a,T^{(\tilde{k},\tilde{r})})(1-v_1^{w_1+a-\ell(\tilde{k},\tilde{r},1)}) = \\ =
-\sum_{w_1=0}^{\ell(\tilde{k},\tilde{r},1)} \sum_{a=0}^{\ell(\tilde{k},\tilde{r},1)-w_1} \!\!\!\!\!\!\varphi_1(a,T^{(\tilde{k},\tilde{r})})(1-v_1^{w_1+a-\ell(\tilde{k},\tilde{r},1)}) \sum_{w_3=0}^{\infty} \sum_{\Gamma^{(k,r)} \in {\mathbb H}_{-1}(\tilde{\gamma},w_3)} Q_{1,i}(\Gamma^{(k,r)},w_1,w_3)  \leqslant \\
-\leqslant
-\sum_{w_1=0}^{\ell(\tilde{k},\tilde{r},1)} \sum_{a=0}^{\ell(\tilde{k},\tilde{r},1)-w_1} \varphi_1(a,T^{(\tilde{k},\tilde{r})})(1-v_1^{w_1+a-\ell(\tilde{k},\tilde{r},1)})\leqslant \\
-\leqslant
-(1-\varepsilon^{-\ell(\tilde{k},\tilde{r},1)}) \sum_{w_1=0}^{\ell(\tilde{k},\tilde{r},1)} \sum_{a=0}^{\ell(\tilde{k},\tilde{r},1)-w_1} \varphi_1(a,T^{(\tilde{k},\tilde{r})}) = C^*.
-\label{define:constant}
-\end{multline}
-Последнее выражение в этой цепочке содержит конечное число слагаемых, поэтому ограничено по $i\geqslant 0$.
-Оставшаяся сумма в выражении \eqref{two:summs} требует более детального рассмотрения. Для нее переберем различные $\tilde{\gamma}$, чтобы раскрыть множество ${\mathbb H}_{-1}(\Gamma^{(\tilde{k},\tilde{r})}, w_3) $. Ниже будем предполагать, что $k_1, r_1$ таковы, что $h_1(\Gamma^{(k_1,r_1)})=\tilde{r}$, и $r_2$ таково, что $h_3(r_2)=\Gamma^{(\tilde{k},\tilde{r})}$.
-
-Пусть $\tilde{k} = 0$. Тогда ${\mathbb H}_{-1}(\Gamma^{(0,\tilde{r})}, w_3) = \{\Gamma^{(k_1,r_1)}, \Gamma^{(0,\tilde{r}\ominus_0 1)}\}$ при $w_3\leqslant L$ и ${\mathbb H}_{-1}(\Gamma^{(0,\tilde{r})}, w_3) = \varnothing$ при $w_3 > L$.  Значит,
-
-
-\begin{multline*}
- \sum_{w_1=0}^{\infty}\sum_{w_3=0}^{\infty} \sum_{\Gamma^{(k,r)} \in {\mathbb H}_{-1}(\tilde{\gamma},w_3)} Q_{1,i}(\Gamma^{(k,r)},w_1,w_3)  \times  v_1^{w_1} q^{(1)}(\tilde{k},\tilde{r},v_1) = \\ = q^{(1)}(\tilde{k},\tilde{r},v_1)  \sum_{w_1=0}^{\infty}\sum_{w_3=0}^{L} [ Q_{1,i}(\Gamma^{(k_1,r_1)},w_1,w_3) + Q_{1,i}(\Gamma^{(0,\tilde{r}\ominus_0 1)},w_1,w_3) ] \times  v_1^{w_1} \leqslant \\ \leqslant
- q^{(1)}(\tilde{k},\tilde{r},v_1)  [\mathfrak{M}^{(1,i)}(k_1,r_1,v_1,1)  + \mathfrak{M}^{(1,i)}(0,\tilde{r}\ominus_0 1,v_1,1) ].
-\end{multline*}
-
-
-Пусть $\Gamma^{(\tilde{k},\tilde{r})}\in C_k^{\mathrm{I}}$. Тогда ${\mathbb H}_{-1}(\Gamma^{(\tilde{k},\tilde{r})}, w_3) = \{\Gamma^{(\tilde{k},\tilde{r}\ominus_{\tilde{k}} 1)}, \Gamma^{(0,r_2)}\}$ при $w_3 >  L$ и ${\mathbb H}_{-1}(\Gamma^{(\tilde{k},\tilde{r})}, w_3) = \varnothing$ при $w_3 \leqslant L$. Следовательно,
-
-\begin{multline*}
- \sum_{w_1=0}^{\infty}\sum_{w_3=0}^{\infty} \sum_{\Gamma^{(k,r)} \in {\mathbb H}_{-1}(\tilde{\gamma},w_3)} Q_{1,i}(\Gamma^{(k,r)},w_1,w_3)  \times  v_1^{w_1} q^{(1)}(\tilde{k},\tilde{r},v_1) = \\ = q^{(1)}(\tilde{k},\tilde{r},v_1)  \sum_{w_1=0}^{\infty}\sum_{w_3=L+1}^{\infty} [ Q_{1,i}(\Gamma^{(\tilde{k},\tilde{r}\ominus_{\tilde{k}} 1)},w_1,w_3) + Q_{1,i}(\Gamma^{(0,r_2)},w_1,w_3) ] \times  v_1^{w_1} \leqslant \\ \leqslant
- q^{(1)}(\tilde{k},\tilde{r},v_1)  [\mathfrak{M}^{(1,i)}(\tilde{k},\tilde{r}\ominus_{\tilde{k}} 1,v_1,1)  + \mathfrak{M}^{(1,i)}(0,r_2,v_1,1) ].
-\end{multline*}
-
-
-Пусть $\Gamma^{(\tilde{k},\tilde{r})}\in C_k^{\mathrm{O}} \bigcup C_k^{\mathrm{N}}$. В этом случае ${\mathbb H}_{-1}(\Gamma^{(\tilde{k},\tilde{r})}, w_3) = \{\Gamma^{(\tilde{k},\tilde{r}\ominus_{\tilde{k}} 1)}\}$, и
-
-\begin{multline*}
- \sum_{w_1=0}^{\infty}\sum_{w_3=0}^{\infty} \sum_{\Gamma^{(k,r)} \in {\mathbb H}_{-1}(\tilde{\gamma},w_3)} Q_{1,i}(\Gamma^{(k,r)},w_1,w_3)  \times  v_1^{w_1} q^{(1)}(\tilde{k},\tilde{r},v_1) = \\ = q^{(1)}(\tilde{k},\tilde{r},v_1)  \sum_{w_1=0}^{\infty}\sum_{w_3=0}^{\infty}  Q_{1,i}(\Gamma^{(\tilde{k},\tilde{r}\ominus_{\tilde{k}} 1)},w_1,w_3)  \times  v_1^{w_1} = \\ =
- q^{(1)}(\tilde{k},\tilde{r},v_1)  \mathfrak{M}^{(1,i)}(\tilde{k},\tilde{r}\ominus_{\tilde{k}} 1,v_1,1).
-\end{multline*}
-
-Значит, последовательность $\{\mathfrak{M}_+^{(1,i)}(k,r,v_1); i\geqslant 0\}$, заданная начальным условием $\mathfrak{M}_+^{(1,0)}(k,r,v_1)=\mathfrak{M}^{(1,0)}(k,r,v_1,1)$ и  определенная соотношениями:
-\begin{enumerate}[ 1{)} ]
-
-\item для $ \Gamma^{(0,r)} \in \Gamma$, $r = \overline{1,n_0}$ 
-\begin{equation}
-\mathfrak{M}_+^{(1,i+1)}(0,r,v_1) = q^{(1)}(k,r,v_1)
-[\mathfrak{M}_+^{(1,i)}(k_1, r_1,v_1) +\mathfrak{M}_+^{(1,i)}(0, r\ominus_0 1,v_1) ] + C^*;
-\label{dominate:1}
-\end{equation}
-\item для $\Gamma^{(\tilde{k},\tilde{r})} \in C_{\tilde{k}}^{\mathrm{I}}$
-\begin{equation}
- \mathfrak{M}_+^{(1,i+1)}(k,r,v_1) = q^{(1)}(k,r,v_1) [ \mathfrak{M}_+^{(1,i)}(k,r\ominus_{k}1,v_1) +\mathfrak{M}_+^{(1,i)}(0,r_2,v_1) ]+ C^*;
- \label{dominate:2}
-\end{equation}
-\item для $\Gamma^{(\tilde{k},\tilde{r})} \in C_{\tilde{k}}^{\mathrm{O}} \cup C_{\tilde{k}}^{\mathrm{N}}$
-\begin{equation}
-\mathfrak{M}_+^{(1,i+1)}(k,r,v_1) = q^{(1)}(k,r,v_1) \mathfrak{M}_+^{(1,i)}(k,r\ominus_k 1,v_1) + C^*,
-\label{dominate:3}
-\end{equation}
-\end{enumerate}
-является мажорирующей для последовательности $\{\mathfrak{M}^{(1,i)}(k,r,v_1,1); i\geqslant 0\}$. Другими словами $ \mathfrak{M}_+^{(1,i)}(k,r,v_1)\geqslant \mathfrak{M}^{(1,i)}(k,r,v_1,1)$ для всех $i\geqslant 0$. Величина $C^*$ определена в \eqref{define:constant} и является постоянной относительно $i\geqslant 0$ и $v_1\in [1,1+\varepsilon]$. Предельные свойства мажорирующей последовательности, определенной соотношениями \eqref{dominate:1}--\eqref{dominate:3}, существенным образом зависят от расположения корней многочлена:
-\begin{equation}
-x^{n_0} \times \prod_{k=1}^{d} \big(x^{n_k} - \prod_{r=1}^{n_j}q^{(1)}(k,r,v_1)\big).
-\label{characteristic:polinom}
-\end{equation}
-При $v_1=1$ модули корней многчлена \eqref{characteristic:polinom} равны либо $0$, либо $1$. Несложно проверить, что для сходимости последовательности $\{\mathfrak{M}_+^{(1,i)}(k,r,v_1); {i~\geqslant~0}\}$ достаточно, чтобы все корни многочлена \eqref{characteristic:polinom} по модулю были меньше $1$. В правой окрестности точки $v_1=1$ модули нулевых корней изменятся не сильно и будут меньше $1$, поэтому рассмотрим динамику изменения корней, модули которых равны $1$ при $v_1=1$.
-Предположив выполненным условие $\min_{k=\overline{1,d}} { \frac{\sum_{r = 1}^{n_k} \ell(k,r,1) }{\lambda_1 f_1'(1) \sum_{r=1}^{n_k} T^{(k,r)} }}>1$, $k=\overline{1;d}$, получим, что величины
-\begin{multline}
- \left.\left(\prod_{r=1}^{n_k}q^{(1)}(k,r,v_1)\right) ' \right|_{v_1=1} = 
-  \left.\left(\prod_{r=1}^{n_k}v^{-\ell(k,r,3)}\sum_{w=0}^{\infty} \varphi_1(w,T^{(k,r)})v^w \right) ' \right|_{v_1=1} = \\ =
-   \left.\left(\prod_{r=1}^{n_k} v^{-\ell(k,r,3)}\exp(\lambda_1 T^{(k,r)} (f_1(v)-1))\right) ' \right|_{v_1=1} = \\ =
-    \left.\left(v^{-\sum_{r=1}^{n_k}\ell(k,r,3)}\exp(\lambda_1 (f_1(v)-1)\sum_{r=1}^{n_k} T^{(k,r)}) \right) ' \right|_{v_1=1} = \\ =
+ \left.\left(Q_1(v,k)\right) ' \right|_{v_1=1} = 
+  \left.\left(\prod_{r=1}^{n_k}v^{-\ell(k,r,1)}\sum_{w=0}^{\infty} \varphi_1(w,T^{(k,r)})v^w \right) ' \right|_{v_1=1} = \\ =
+   \left.\left(\prod_{r=1}^{n_k} v^{-\ell(k,r,1)}\exp(\lambda_1 T^{(k,r)} (f_1(v)-1))\right) ' \right|_{v_1=1} = \\ =
+    \left.\left(v^{-\sum_{r=1}^{n_k}\ell(k,r,1)}\exp(\lambda_1 (f_1(v)-1)\sum_{r=1}^{n_k} T^{(k,r)}) \right) ' \right|_{v_1=1} = \\ =
 \lambda_1 f_1'(1) \sum_{r=1}^{n_k} T^{(k,r)} -\sum_{r=1}^{n_k} \ell(k,r,1), 
 \label{derivative:cycle}
 \end{multline}
-определяющие знак производной ненулевых корней, отрицательны. Поэтому 
-в сделанных предположениях мажорирующая последовательность  $\{\mathfrak{M}_+^{(1,i}(k,r,v_1); {i~\geqslant~0}\}$ сходится и является ограниченной для некоторого ${v_1^*>1}$. Это, в свою очередь, влечет ограниченность исходной последовательности \linebreak $\{\mathfrak{M}^{(1,i)}(k,r,v_1,1); i~\geqslant~0\}$ для любого $v_1$ хотя бы из окрестности $[1, 1+\varepsilon_1]$, при ${0<\varepsilon_1 \leqslant v_1^* < \varepsilon}$.
+определяющие знак производной, отрицательны. Поэтому $|Q_1(v,k)|<1$ для всех $k=\overline{1;d}$  хотя бы в некоторой правой окрестности $1 \leqslant v \leqslant (1+ \varepsilon_1)^{1/2}$ точки $v=1$. Этот факт, в свою очередь, обеспечивает ограниченность в этой же окрестности величин $E[v^{\hat{\varkappa}_{1,i}^{(1)}} ]$ и $E[v^{\hat{\varkappa}_{1,i}^{(2)}}] $ равномерно по $i$.
+
+
+Далее из определений \eqref{stop:times} и \eqref{stop:queue} следует, что для любого $i\geqslant 0$ существуют такие $j_1$ и $j_2$, что
+\begin{equation*}
+\varkappa_{1}^{(1)}(i) \leqslant \hat{\varkappa}_{1,j_1}^{(1)}, \quad
+\varkappa_{1}^{(2)}(i) \leqslant \hat{\varkappa}_{1,j_2}^{(2)}.
+\end{equation*}
+Следовательно, из \eqref{cenzor:estimate} и неравенства Коши-Буняковского заключаем, что
+\begin{equation*}
+\mathfrak{M}^{(1,i)}(k,r,v,1) \leqslant \bigl( E[v^{2 \varkappa_{1}^{(1)}(i)}] E[v^{2\varkappa_{1}^{(2)}(i)}]\bigr)^{1/2}
+ \leqslant \bigl( E[v^{2 \hat{\varkappa}_{1,j_1}^{(1)}}] E[v^{2\hat{\varkappa}_{1,j_2}^{(2)}}]\bigr)^{1/2}
+\end{equation*}
+и, значит, для любого $v$ хотя бы из окрестности $[1, 1+\varepsilon_1]$ исходная последовательность $\{\mathfrak{M}^{(1,i)}(k,r,v,1); i~\geqslant~0\}$  ограничена равномерно по $i$.
+
 \end{proof}
+
+
+
 Основным результатом работы является достаточное условие существования стационарного режима последовательности $\{(\Gamma_i, \varkappa_{1,i},\varkappa_{3,i}); i \geqslant 0\}$.
 \begin{theorem}
 Для того, чтобы марковская цепь $\{(\Gamma_i, \varkappa_{1,i},\varkappa_{3,i}); i \geqslant 0\}$ имела стационарное распределение $Q_1(\gamma,x_1,x_3)$, $(\gamma,x_1,x_3)\in \Gamma \times {\mathbb Z}^2_+$, достаточно выполнения неравенства 
@@ -762,7 +793,7 @@ $$
 
 \bibitem{Klimenok:Dudin:2005} Klimenok~V.I., Breuer~L., Tsarenkov~G.V., Dudin~A.N. The $BMAP/G/1/N \to PH/1/M$ system with losses // Performance Evaluation 61. 2005. Pp.~17--40.
 \bibitem{Klimenok:2010} Клименок~В.И., Тарамин~О.С. Двухфазная система обслуживания с групповым марковским потоком и повторными вызовами // Автоматика и телемеханика. 2010. \No~1. С.~3--17 .
-\bibitem{Klimenok:2015} Клименок~В.И., Савко~Р.Ч. Двухфазная система с повторными попытками и нетерпеливостью запросов // Автоматика и телемеханика. 2015. \No{}~8. Pp.~78--93. 
+\bibitem{Klimenok:2015} Клименок~В.И., Савко~Р.Ч. Двухфазная система с повторными попытками и нетерпеливостью запросов // Автоматика и телемеханика. 2015. \No{}~8. C.~78--93. 
 
 \bibitem{Zorine:2012} Zorine~A.V. Stability of a tandem of queuing systems with Bernoulli noninstantaneous transfer of customers // Theory of Probability and Mathematical Statistics. 2012. V.~84. Pp.~173--188.
 \bibitem{Zorine:2013} Zorine~A.V. Study of Queues' Sizes in Tandem Intersections under Cyclic Control in Random Environment // Modern Probabilistic Methods for Analysis of Telecommunication Networks. Communications in Computer and Information Science. 2013. V.~356. Pp.~206-215.
@@ -774,7 +805,7 @@ $$
 
 
 \end{thebibliography}
-
+\newpage
 \bigskip\medskip{\centerline{\bf Сведения об авторах}}
 \begin{enumerate}[1.]
 \item {\bf Кочеганов Виктор Михайлович}\\
@@ -827,5 +858,55 @@ revised .
 {\bf Keywords:} stationary distribution, controlling queueing system, cyclic algorithm with prolongations, conflicting flows, multidimensional denumerable discrete-time Markov chain
 \end{quote}
 \vspace{5mm}
+
+
+
+\bigskip\bigskip\def\refname{\centerline{References}}
+\begin{thebibliography}{99}
+
+\bibitem{} Haight~F.A. {\it Mathematical Theories of Traffic Flow.} New York: Academic Press, 1963. 242~p.
+\bibitem{} Drew~D.R. {\it Traffic Flow Theory and Control.} New York: McGraw-Hill, 1968. 467~p.
+\bibitem{} Inose~H., Hamada~T. {\it Upravlenie dorozhnym dvizheniem. } [Road Traffic Control]. Transport, Moscow, 1983, 248~p. (In Russian)
+%Иносэ~Х., Хамада~Т. Управление дорожным движением. Москва: Транспорт. 1983. 248 с.
+\bibitem{} Bartlett~M.S., The Spectral Analysis of Point Processes. {\it Journal of the Royal Statistical Society. Series B (Methodological)}, 1963, vol.~25, no.~2, pp.~264--296.
+\bibitem{} Cox~D.R., P.A.W.~Lewis. {\it Statisticheskii analiz posledovatel'nosti sobytii}. [The Statistical Analysis of Series of Events]. "Mir" Publ., Moscow, 1969. 312~p. (In Russian)
+%Кокс~Д.Р., П.~Льюис. Статистический анализ последовательности событий. М.: Мир, 1969. 312 с.
+\bibitem{} D.L.~Jagerman, B.~Melamed, W.~Willinger  Stochastic modeling of traffic process. {\it In: Frontiers in queuing: models and applications in science and engineering, edited by J.H. Dshalalov. Boca Raton: CRC Press}, 1997, pp. 271–320.
+\bibitem{} Fedotkin~M.A., Kudryavtsev~E.V., Rachinskaya~M.A.  About correctness of probabilistic models of traffic flows dynamics on a motorway. {\it Proceedings of 36 International Workshop <<Distributed computer and communication networks>> (DCCN-2010), Moscow}, 2010, pp.~86--93.
+\bibitem{} Fedotkin~M.A., Rachinskaya~M.A.  Investigation of Traffic Flows Characteristics in Case of the Small Density. {\it Queues: Flows, Systems, Networks. Proceedings of the International Conference <<Modern Probabilistic Methods for Analysis and Optimization of Information and Telecommunication Networks>>, Minsk: BSU-RIVH}, 2011, no.~21, pp.~82--87.
+\bibitem{} Fedotkin~M., Rachinskaya~M. Parameters Estimator of the Probabilistic Model of Moving Batches Traffic Flow. {\it Distributed Computer and Communication Networks. Springer International Publishing, <<Communications in Computer and Information Science>> series}, 2014, vol.~279, pp.~154--168.
+\bibitem{} Afanasyeva~L.G., Bulinskaya~E.V.  Estimation of transport systems capacity. {\it Traffic and Granular Flow '11. Springer-Verlag Berlin, Heidelberg}, 2013, pp.~63--77.
+\bibitem{} Afanasyeva~L.G., Bulinskaya~E.V.  Matematicheskie modeli transportnykh sistem, osnovannye na teorii ocheredei. [Mathematical models of road traffic based on queueing theory]. {\it Trudy Moskovskogo fiziko-tekhnicheskogo instituta (gosudarstvennogo universiteta)} [Proceedings of Moscow physicotechnical institute (of State University)], 2010, vol.~2, no.~4, pp.~6--21. (In Russian)
+%Афанасьева~Л.Г., Булинская~Е.В. Математические модели транспортных систем, основанные на теории очередей // Труды Московского физико-технического института (государственного университета). 2010. Т.~2. \No{}~4. С.~6–21.
+\bibitem{} Afanasyeva~L.G., Bulinskaya~E.V.  Asymptotic analysis of traffic lights performance under heavy traffic assumption. {\it Methodology and Computing in Applied Probability, Springer}, 2013, vol.~15, no.~4, pp.~935--950.
+
+\bibitem{} Reich~E.  Waiting times when queues are in tandem. {\it The Annals of Mathematical Statistics}, 1957, vol.~28. no.~3, pp.~768-773.
+
+\bibitem{} Balsamo~S., Persone~V.D.N., Inverardi~P. A review on queueing network models with finite capacity queues for software architectures performance prediction. {\it  Performance Evaluation}, 2003, vol.~51, pp.~269–288.
+\bibitem{} Gnedenko~B.W., Konig~D. Handbuch der Bedienungstheorie. {\it Berlin: Akademie Verlag}, 1983. 
+\bibitem{} Perros~H.G.  Queuing networks with blocking in: Exact and Approximate Solutions. {\it New York: Oxford University Press}, 1994, 358~p.
+
+\bibitem{} Gomez-Corral~A.  A tandem queue with blocking and Markovian arrival process. {\it Queuing Systems}, 2002, vol.~41, pp.~343--370.
+\bibitem{} Gomez-Corral~A. On a tandem G-network with blocking.  {\it Advances in Applied Probability}, 2002, vol.~34(3), pp.~626--661.
+\bibitem{} Gomez-Corral~A. A matrix-geometric approximation for tandem queues with blocking and repeated attempts. {\it  Operations Research Letters}, 2002, vol.~30, pp.~360--374.
+
+\bibitem{} Klimenok~V.I., Breuer~L., Tsarenkov~G.V., Dudin~A.N.  The $BMAP/G/1/N \to PH/1/M$ system with losses.{\it Performance Evaluation}, 2005, vol.~61, pp.~17--40.
+\bibitem{} Klimenok~V.I., Taramin~O.S. Dvukhfaznaya sistema obsluzhivaniya s gruppovym markovskim potokom i povtornymi vyzovami. [Two-phase queuing system with Batch Markov Arrival Process and repeated requests] {\it Avtomatika i telemekhanika} [Automatics and telemechanics], 2010, no.~1, pp.~3--17. (In Russian)
+%Клименок~В.И., Тарамин~О.С. Двухфазная система обслуживания с групповым марковским потоком и повторными вызовами // Автоматика и телемеханика. 2010. \No~1. С.~3--17 .
+\bibitem{} 
+Klimenok~V.I., Savko~R.Ch. Dvukhfaznaya sistema s povtornymi popytkami i neterpelivost'yu zaprosov [Two-phase system with repeated requests] {\it Avtomatika i telemekhanika} [Automatics and telemechanics], 2015, no.~8, pp.~78--93. (In Russian)
+%Клименок~В.И., Савко~Р.Ч. Двухфазная система с повторными попытками и нетерпеливостью запросов // Автоматика и телемеханика. 2015. \No{}~8. Pp.~78--93. 
+\bibitem{} Zorine~A.V. Stability of a tandem of queuing systems with Bernoulli noninstantaneous transfer of customers. {\it Theory of Probability and Mathematical Statistics}, 2012, vol.~84, pp.~173--188.
+\bibitem{} Zorine~A.V. Study of Queues' Sizes in Tandem Intersections under Cyclic Control in Random Environment. {\it Modern Probabilistic Methods for Analysis of Telecommunication Networks. Communications in Computer and Information Science}, 2013, vol.~356, pp.~206-215.
+
+\bibitem{} Kocheganov~V.M., Zorine~A.V. Dostatochnoe uslovie sushchestvovaniya statsionarnogo rezhima nizkoprioritetnoi ocheredi v tandeme sistem massovogo obsluzhivaniya [Sufficient condition of low-priority queue stationary distribution existence in a tandem of queuing systems]. {\it Vestnik Volzhskoi gosudarstvennoi akademii vodnogo transporta} [Bulletin of the Volga State Academy of Water Transport], 2017, vol.~50, pp.~47--55. (In Russian)
+%Кочеганов~В.М., Зорин~А.В. Достаточное условие существования стационарного режима низкоприоритетной очереди в тандеме систем массового обслуживания // Вестник Волжской государственной академии водного транспорта. 2017. Выпуск~50. С.~47–55.
+
+\bibitem{} Yablonskii~S.V. {\it Osnovnye ponyatiya kibernetiki} [Basic concepts of cybernetics].  Problemy kibernetiki, "Fizmatgiz" Publ., Moscow. 1959. V.~2. Pp.~7--38. (In Russian)
+%Яблонский~С.В. Основные понятия кибернетики // Проблемы кибернетики. Выпуск~2. М.:~Физматгиз, 1959. С.~7–38.
+\bibitem{} Shiryaev~A.N. {\it Veroyatnost': v 2-h kn. Kn.~1.} [Probability: in 2 books. Book~1]. "Nauka" Publ., Moscow. 2007. 552~p. (In Russian)
+%Ширяев~А.Н. Вероятность: в 2-х кн. Кн.~1. М.:~Наука, 2007. 552~с.
+
+\end{thebibliography} 
 
 \end{document}
