--- a/Conferences/Tver/Kocheganov_Zorine.tex
+++ b/Conferences/Tver/Kocheganov_Zorine.tex
@@ -698,9 +698,10 @@ E[v^{\hat{\varkappa}_{1,i+1}^{(1)}} I(\Gamma_{\theta_{i+1}^{(1)}}= \Gamma^{(\til
 
 Основным результатом работы является достаточное условие существования стационарного режима последовательности $\{(\Gamma_i, \varkappa_{1,i},\varkappa_{3,i}); i \geqslant 0\}$.
 \begin{theorem}
-Для того, чтобы марковская цепь $\{(\Gamma_i, \varkappa_{1,i},\varkappa_{3,i}); i \geqslant 0\}$ имела стационарное распределение $Q_1(\gamma,x_1,x_3)$, $(\gamma,x_1,x_3)\in \Gamma \times {\mathbb Z}^2_+$, достаточно выполнения неравенства 
+Для того, чтобы марковская цепь $\{(\Gamma_i, \varkappa_{1,i},\varkappa_{3,i}); i \geqslant 0\}$ имела стационарное распределение $Q_1(\gamma,x_1,x_3)$, $(\gamma,x_1,x_3)\in \Gamma \times {\mathbb Z}^2_+$, достаточно выполнения неравенств
 \begin{equation}
-\min_{\substack{k=\overline{1,d}\\ j=1,3}} { \frac{\sum_{r = 1}^{n_k} \ell(k,r,j) }{\lambda_j f_j'(1) \sum_{r=1}^{n_k} T^{(k,r)} }}>1.
+\min_{k=\overline{0,d}} { \frac{\sum_{r = 1}^{n_k} \ell(k,r,1) }{\lambda_1 f_1'(1) \sum_{r=1}^{n_k} T^{(k,r)} }}>1, \quad 
+\min_{k=\overline{1,d}} { \frac{\sum_{r = 1}^{n_k} \ell(k,r,3) }{\lambda_3 f_3'(1) \sum_{r=1}^{n_k} T^{(k,r)} }}>1.
 \label{sufficient:double}
 \end{equation}
 \end{theorem}
@@ -866,12 +867,12 @@ revised .
 
 \bibitem{} Haight~F.A. {\it Mathematical Theories of Traffic Flow.} New York: Academic Press, 1963. 242~p.
 \bibitem{} Drew~D.R. {\it Traffic Flow Theory and Control.} New York: McGraw-Hill, 1968. 467~p.
-\bibitem{} Inose~H., Hamada~T. {\it Upravlenie dorozhnym dvizheniem. } [Road Traffic Control]. Transport, Moscow, 1983, 248~p. (In Russian)
+\bibitem{} Inose~H., Hamada~T. {\it Upravlenie dorozhnym dvizheniem} [Road Traffic Control]. Transport, Moscow, 1983, 248~p. (In Russian)
 %Иносэ~Х., Хамада~Т. Управление дорожным движением. Москва: Транспорт. 1983. 248 с.
 \bibitem{} Bartlett~M.S., The Spectral Analysis of Point Processes. {\it Journal of the Royal Statistical Society. Series B (Methodological)}, 1963, vol.~25, no.~2, pp.~264--296.
-\bibitem{} Cox~D.R., P.A.W.~Lewis. {\it Statisticheskii analiz posledovatel'nosti sobytii}. [The Statistical Analysis of Series of Events]. "Mir" Publ., Moscow, 1969. 312~p. (In Russian)
+\bibitem{} Cox~D.R., P.A.W.~Lewis. {\it Statisticheskii analiz posledovatel'nosti sobytii} [The Statistical Analysis of Series of Events]. <<Mir>> Publ., Moscow, 1969. 312~p. (In Russian)
 %Кокс~Д.Р., П.~Льюис. Статистический анализ последовательности событий. М.: Мир, 1969. 312 с.
-\bibitem{} D.L.~Jagerman, B.~Melamed, W.~Willinger  Stochastic modeling of traffic process. {\it In: Frontiers in queuing: models and applications in science and engineering, edited by J.H. Dshalalov. Boca Raton: CRC Press}, 1997, pp. 271–320.
+\bibitem{} D.L.~Jagerman, B.~Melamed, W.~Willinger. Stochastic modeling of traffic process. {\it In: Frontiers in queuing: models and applications in science and engineering, edited by J.H. Dshalalov. Boca Raton: CRC Press}, 1997, pp. 271–320.
 \bibitem{} Fedotkin~M.A., Kudryavtsev~E.V., Rachinskaya~M.A.  About correctness of probabilistic models of traffic flows dynamics on a motorway. {\it Proceedings of 36 International Workshop <<Distributed computer and communication networks>> (DCCN-2010), Moscow}, 2010, pp.~86--93.
 \bibitem{} Fedotkin~M.A., Rachinskaya~M.A.  Investigation of Traffic Flows Characteristics in Case of the Small Density. {\it Queues: Flows, Systems, Networks. Proceedings of the International Conference <<Modern Probabilistic Methods for Analysis and Optimization of Information and Telecommunication Networks>>, Minsk: BSU-RIVH}, 2011, no.~21, pp.~82--87.
 \bibitem{} Fedotkin~M., Rachinskaya~M. Parameters Estimator of the Probabilistic Model of Moving Batches Traffic Flow. {\it Distributed Computer and Communication Networks. Springer International Publishing, <<Communications in Computer and Information Science>> series}, 2014, vol.~279, pp.~154--168.
@@ -902,9 +903,9 @@ Klimenok~V.I., Savko~R.Ch. Dvukhfaznaya sistema s povtornymi popytkami i neterpe
 \bibitem{} Kocheganov~V.M., Zorine~A.V. Dostatochnoe uslovie sushchestvovaniya statsionarnogo rezhima nizkoprioritetnoi ocheredi v tandeme sistem massovogo obsluzhivaniya [Sufficient condition of low-priority queue stationary distribution existence in a tandem of queuing systems]. {\it Vestnik Volzhskoi gosudarstvennoi akademii vodnogo transporta} [Bulletin of the Volga State Academy of Water Transport], 2017, vol.~50, pp.~47--55. (In Russian)
 %Кочеганов~В.М., Зорин~А.В. Достаточное условие существования стационарного режима низкоприоритетной очереди в тандеме систем массового обслуживания // Вестник Волжской государственной академии водного транспорта. 2017. Выпуск~50. С.~47–55.
 
-\bibitem{} Yablonskii~S.V. {\it Osnovnye ponyatiya kibernetiki} [Basic concepts of cybernetics].  Problemy kibernetiki, "Fizmatgiz" Publ., Moscow. 1959. V.~2. Pp.~7--38. (In Russian)
+\bibitem{} Yablonskii~S.V. {\it Osnovnye ponyatiya kibernetiki} [Basic concepts of cybernetics].  Problemy kibernetiki [Cybernetics problems], <<Fizmatgiz>> Publ.  , Moscow, 1959, vol.~2, pp.~7--38. (In Russian)
 %Яблонский~С.В. Основные понятия кибернетики // Проблемы кибернетики. Выпуск~2. М.:~Физматгиз, 1959. С.~7–38.
-\bibitem{} Shiryaev~A.N. {\it Veroyatnost': v 2-h kn. Kn.~1.} [Probability: in 2 books. Book~1]. "Nauka" Publ., Moscow. 2007. 552~p. (In Russian)
+\bibitem{} Shiryaev~A.N. {\it Veroyatnost': v 2-h kn. Kn.~1.} [Probability: in 2 books. Book~1]. <<Nauka>> Publ., Moscow, 2007, 552~p. (In Russian)
 %Ширяев~А.Н. Вероятность: в 2-х кн. Кн.~1. М.:~Наука, 2007. 552~с.
 
 \end{thebibliography} 
