Shrink letter spaces in NIR

--- a/phd_study/NIR/NIR.tex
+++ b/phd_study/NIR/NIR.tex
@@ -23,7 +23,7 @@
 \usepackage{euscript}
 \usepackage{indentfirst}
 \usepackage[english,russian]{babel}
-
+\usepackage{microtype}
 % \sloppy\unitlength=.24mm
 % \renewcommand{\thefootnote}{\arabic{footnote}}
 
@@ -91,11 +91,15 @@
 \begin{document}
 
 \begin{titlepage}
+
   \begin{center}
-    \textbf{МИНИСТЕРСТВО ОБРАЗОВАНИЯ И НАУКИ РОССИЙСКОЙ ФЕДЕРАЦИИ} \\
+  \textls[-80]{
+    \textbf{МИНИСТЕРСТВО ОБРАЗОВАНИЯ И НАУКИ РОССИЙСКОЙ ФЕДЕРАЦИИ} }\\
+    \textls[-30]{
     \textbf{%
-    ФГАОУ ВО 
-      <<Нижегородский государственный университет им. Н.И. Лобачевского>>
+    {ФГАОУ ВО 
+      <<Нижегородский государственный университет им.~Н.И.~Лобачевского>>}
+    }
     }
 
  \medskip
@@ -103,6 +107,7 @@
  
    \textbf{ Институт информационных технологий, математики и механики }\\
     Кафедра программной инженерии
+
     
  \medskip
   \medskip
@@ -130,7 +135,7 @@
     \textbf{ОТЧЕТ  ПО}\\ \textbf{ИССЛЕДОВАТЕЛЬСКОЙ ПРАКТИКЕ}\\
  \medskip
     \textbf{по теме:} \\
-    <<Достаточное условие существования стационарного режима очередей первичных требований в тандеме систем массового обслуживания>>
+    <<Достаточное условие существования стационарного режима очередей \\ первичных требований в тандеме систем массового обслуживания>>
     
          \medskip
       \medskip
