Refactore phd stuff

--- a/phd_study/Ped_pract/NIP.tex
+++ b/phd_study/Ped_pract/NIP.tex
@@ -28,6 +28,12 @@
 \usepackage{indentfirst}
 \usepackage[english,russian]{babel}
 \usepackage{microtype}
+
+\newcommand{\M}{{\mathsf M}\,}
+\newcommand{\cov}{\mathsf{cov}}
+\newcommand{\corr}{\mathsf{corr}}
+\newcommand{\var}{\mathsf{D}\,}
+\renewcommand{\Pr}{{\mathsf P}}
 % \sloppy\unitlength=.24mm
 % \renewcommand{\thefootnote}{\arabic{footnote}}
 
@@ -110,7 +116,7 @@
 
  
    { Институт информационных технологий, математики и механики }\\
-    Кафедра программной инженерии
+    Кафедра математического обеспечения и суперкомпьютерных технологий
 
     
  \medskip
@@ -175,9 +181,63 @@
     % \begin{displayquote}
     % sf
     % \end{displayquote}
-    \item Далее необходимо ввести определение ковариации двух случайных величин. Поскольку у студентов не было глубокого изучения теории меры и интеграла Лебега, важно сделать акцент на непрерывном и дискретном видах распределения. Далее следует привести пример вычисления ковариации для двумерного нормального распределения (со всеми выкладками).
-    \item Рассказать про физический смысл ковариации. А именно, ковариация помогает находить разброс случайных величин в проекции на конкретное направление. 
+    \item Далее необходимо ввести определение ковариации двух случайных величин. 
+        \begin{definition}
+  Пусть $X$, $Y$ --- случайные величины с конечными математическими ожиданиями $\M X$ и
+  $\M Y$. Число 
+  \[
+  \cov(X,Y)=\M(X-\M X)(Y-\M Y)
+  \]
+  называется \emph{ковариацией} между случайными величинами $X$ и $Y$.
+\end{definition}
+Поскольку у студентов не было глубокого изучения теории меры и интеграла Лебега, важно сделать акцент на непрерывном и дискретном видах распределения. Далее следует привести пример вычисления ковариации для двумерного нормального распределения (со всеми выкладками).
+\[
+p(u,v)=\dfrac{\exp\Bigl\{-\dfrac{1}{2(1-r^2)}\Bigl(
+\Bigl(\dfrac{u-a}{\sigma_1}\Bigr)^{\!\!2}-2r\dfrac{(u-a)(v-b)}{\sigma_1\sigma_2}
++ \Bigl(\dfrac{v-b}{\sigma_2}\Bigr)^{\!\!2}\,\Bigr)\Bigr\}}{2\pi\sigma_1\sigma_2\sqrt{1-r^2}}%
+.
+\]
+    
+    \item Рассказать про физический смысл ковариации. А именно, выберем направление на плоскости, задавшись направляющими
+косинусами $(\theta_1, \theta_2)$, $\theta^2_1+\theta_2^2=1$. Тогда проекция на единичный
+вектор $(\theta_1, \theta_2)$ отклонения $(X-\M X, Y-\M Y)$ случайной точки $(X,Y)$ от ее
+среднего положения $(\M X, \M Y)$ равна
+\[
+\theta_1(X-\M X)+ \theta_2( Y-\M Y).
+\]
+Естественно измерять степень разброса случайной точки $(X, Y)$ относительно ее среднего
+положения в выбранном направлении с помощью дисперсии
+\begin{multline*}
+\var(\theta_1(X-\M X)+ \theta_2( Y-\M Y)) = \theta_1^2 \var X +
+2\theta_1\theta_2\cov(X,Y)+ \theta_2^2 \var Y =
+ \\ =
+ (\theta_1, \theta_2) 
+ \begin{pmatrix}
+   \var X & \cov(X,Y)\\
+   \cov(X,Y) & \var Y
+ \end{pmatrix}
+ \begin{pmatrix}\theta_1\\ \theta_2
+ \end{pmatrix} \geqslant 0.
+\end{multline*}
+Таким образом, ковариация позволяет находить разброс случайного вектора в заданном
+направлении. 
+
     \item Привести определение матрицы ковариации как характеристику совокупности случайных величин. 
+    \begin{definition}
+  Пусть случайные величины  $X_1$, $X_2$, \ldots $X_n$ имеют конечные математические
+  ожидания. Обозначим $\sigma_i^2=\var X_i$, $\sigma_{i,j}=\cov(X_i, X_j)$, $i\neq
+  j$. Матрица 
+  \[
+  \Sigma=
+  \begin{pmatrix}
+    \sigma_1^2 & \sigma_{1,2} & \ldots & \sigma_{1,n}\\
+    \sigma_{2,1} & \sigma_{2}^2 & \ldots & \sigma_{2,n}\\
+    \vdots & \vdots & \ddots & \vdots\\
+    \sigma_{n,1} & \sigma_{n,2} & \ldots & \sigma_n^2
+  \end{pmatrix}
+  \]
+  называется \emph{ковариационной матрицей} этих случайных величин.
+\end{definition}
     \item Важно перечислить и (выборочно) доказать основные свойства ковариации:
     \begin{itemize}
         \item симметричность (следует из определения);
@@ -186,7 +246,15 @@
         \item вырождение ковариации для независимых случайных величин (доказать самим); дать определение некоррелированным случайным величинам;
         \item Неравенство Чебышева (с доказательством).
     \end{itemize}
-    \item Ввести определение коэффициента корреляции. Привести его свойства:
+    \item Ввести определение коэффициента корреляции. 
+    \begin{definition}
+  Величина 
+  \[
+  \corr(X,Y)=\dfrac{\cov(X,Y)}{\sqrt{\var X \var Y}}
+  \]
+  называется \emph{коэффициентом корреляции} между величинами $X$ и $Y$.
+\end{definition}
+    Привести его свойства:
     \begin{itemize}
         \item симметричность;
         \item вырождение коэффициента корреляции для независмых случайных величин;
