add last changes

--- a/GIA/Qualification/Qualification_work/Titlepage_work.tex
+++ b/GIA/Qualification/Qualification_work/Titlepage_work.tex
@@ -48,7 +48,7 @@
     \end{minipage}
  \vfill 
 
-    \textbf{\large Нижний Новгород 2018}
+    \textbf{\large Нижний Новгород~---~2018}
   \end{center}
   
 \end{titlepage}
