--- a/GIA/Qualification/Научный_доклад/Nauch_doklad.tex
+++ b/GIA/Qualification/Научный_доклад/Nauch_doklad.tex
@@ -418,7 +418,7 @@ $$
 
 
 {\bf Теорема 3.8}
-Множество существенных состояний марковской цепи $\{(\Gamma_i, \varkappa_{1,i},\varkappa_{3,i});$ $i \geqslant 0\}$ имеет вид $\raisebox{-.5ex}{$\biggl($}\bigcup\limits_{1 \leqslant r \leqslant n_0}S^1_{0,r}\raisebox{-.5ex}{$\biggr)$}\cup \raisebox{-.5ex}{$\biggl($}\bigcup\limits_{\substack{1 \leqslant k \leqslant d\\ 1 \leqslant r \leqslant n_k}} S^1_{k,r}\raisebox{-.5ex}{$\biggr)$}$.
+Для марковской цепи $\{(\Gamma_i, \varkappa_{1,i},\varkappa_{3,i});$ $i \geqslant 0\}$ множество существенных состояний  выглядит следующим образом:  $\raisebox{-.5ex}{$\biggl($}\bigcup\limits_{1 \leqslant r \leqslant n_0}S^1_{0,r}\raisebox{-.5ex}{$\biggr)$}\cup \raisebox{-.5ex}{$\biggl($}\bigcup\limits_{\substack{1 \leqslant k \leqslant d\\ 1 \leqslant r \leqslant n_k}} S^1_{k,r}\raisebox{-.5ex}{$\biggr)$}$,
 где
 \begin{align*}
   S^1_{0,r} = & 
@@ -426,12 +426,12 @@ $$
   (\Gamma^{(0,r)},x_1, x_3) \colon \; (x_1, x_3)\in Z^2_+,\; x_3 > L - \max\limits_{k=1, 2,
     \ldots, d}
   \biggl\{ \sum_{t=1}^{n_k} \ell({k,t,3}) \biggl\}\biggl\}, 
-  \quad 1 \leqslant r \leqslant n_0, \\
+  \\ & \quad 1 \leqslant r \leqslant n_0, \\
   S^1_{k,r} = & 
   \biggl\{
   (\Gamma^{(k,r)},x_1, x_3) \colon \; (x_1, x_3)\in Z^2_+,\; x_3 > L - \sum_{t=1}^{r} \ell({k,t,3})
-  \biggr\}, 
-  \quad 1 \leqslant k \leqslant d, \quad 1 \leqslant r \leqslant n_k.
+  \biggr\}, \\
+  &\quad  1 \leqslant k \leqslant d, \quad 1 \leqslant r \leqslant n_k.
 \end{align*}
 
 Теорема 3.9 содержит достаточное условие существования стационарного распределения марковской цепи  $\{(\Gamma_i, \varkappa_{1,i},\varkappa_{3,i}); i \geqslant 0\}$.
