--- a/GIA/Qualification/Научный_доклад/titlepage_doclad.tex
+++ b/GIA/Qualification/Научный_доклад/titlepage_doclad.tex
@@ -42,7 +42,7 @@
         \vfill 
     \vfill 
     \vfill 
-    \textbf{\large Нижний Новгород 2018}
+    \textbf{\large Нижний Новгород~---~2018}
   \end{center}
   
 \end{titlepage}
