--- a/MyPackages/ptvstyle.sty
+++ b/MyPackages/ptvstyle.sty
@@ -6,7 +6,7 @@
 \usepackage[intlimits,sumlimits]{amsmath}
 \usepackage{amssymb,amsthm}
 \usepackage[utf8]{inputenc}
-\usepackage{misccorr}
+%\usepackage{misccorr}
 %\usepackage{amsfonts}
 %Для использования дифференциальных символов
 \usepackage{commath}
@@ -135,7 +135,7 @@
      {\section*{\refname}%
       \@mkboth{\MakeUppercase\refname}{\MakeUppercase\refname}%
       \list{\@biblabel{\@arabic\c@enumiv}}%
-           {\settowidth\labelwidth{\@biblabel{#1}}%
+          {\settowidth\labelwidth{\@biblabel{#1}}%
             \leftmargin 0pt % \labelwidth
             \itemindent \parindent
             \advance\itemindent\labelwidth
@@ -151,7 +151,7 @@
       \widowpenalty4000%
       \sfcode`\.\@m}
      {\def\@noitemerr
-       {\@latex@warning{Empty `thebibliography' environment}}%
+      {\@latex@warning{Empty `thebibliography' environment}}%
       \endlist}
 
 
